<resources>
    <string name="app_name">Movie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="byline">By Line</string>
    <string name="headline">Headline</string>
    <string name="short_summary">Short Summary</string>
    <string name="publication_date">Publication Date</string>
    <string name="opening_date">Opening Date</string>
    <string name="title">Title</string>
</resources>