<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dp_10"
        android:orientation="horizontal">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/byline"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tv_by_line"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14"
                tools:text="Beatrice Loayza" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10">

            <TextView
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/headline"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tv_by_headline"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14"
                tools:text="Till Death’ Review: My Relationship Is Dragging Me Down" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10">

            <TextView
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/short_summary"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tv_by_short_summary"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14"
                tools:text="TMegan Fox leads this straightforward, but gleefully chaotic thriller about a woman handcuffed to the corpse of her husband." />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10">

            <TextView
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/publication_date"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tv_by_publication_date"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14"
                tools:text="2021-07-01" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10">

            <TextView
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/opening_date"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tv_by_opening_date"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14"
                tools:text="2021-07-02" />

        </TableRow>

    </TableLayout>
</layout>